<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EcoPowerMaps</string>
    <string name="action_settings">Settings</string>
    <string name="gpl_title">GPL</string>
    <string name="methane_title">Metano</string>
    <string name="electric_station_title">Electric Stations</string>
    <string name="important_title">Aggiungi ai Preferiti</string>
    <string name="vista">Vista</string>
    <string name="to_the_nearest">Fast Refueling ©</string>
    <string name="to_the_least_expensive">Save Money ©</string>
    <string name="menuitem_edit_contact">Modifica</string>
    <string name="menuitem_delete_contact">Elimina</string>
    <string name="confirmTitle">Elimina Preferito</string>
    <string name="confirmMessage">Sei sicuro di voler eliminare questo preferito?</string>
    <string name="button_delete">Si, sono sicuro</string>
    <string name="button_cancel">No, ho cambiato idea</string>
    <string name="hint_name">Nome Preferito</string>
    <string name="button_save_contact">Salva</string>
    <string name="errorTitle">Attenzione!</string>
    <string name="errorMessage">Hai inserito un nome non valido!</string>
    <string name="errorButton">Ho capito</string>
    <string name="favourite">Preferiti</string>
    <string name="menuitem_navigate_contact">Indicazioni Stradali</string>
    <string name="label_latitude">Latitudine</string>
    <string name="label_longitude">Longitudine</string>
    <string name="label_name">Nome</string>
    <string name="search">Cerca</string>
    <string name="intro">Benvenuto! Filtra la mappa premendo sulle icone in basso. Ti verranno mostrati i marker relativi ai servizi da te scelti. Permi sul marker e ti verranno mostrati i dettagli ad esso associati. Puoi ottenere indicazioni stradali premendo sulle informazioni. Se ti va prova anche le funzioni del menu pensate apposta per te!</string>
    <string name="action_segnala">Segnala</string>
    <string name="message_segnala">La funzione Segnala e\' un modo per aiutare noi sviluppatori a migliorare le informazioni a voi offerte. Per segnalare un servizio non mostrato sulla mappa, assicurati di trovarti nel luogo che intendi segnalare, dopodiche\' prosegui per indicarci il tipo del servizio. A breve controlleremo la segnalazione. Ogni vostro aiuto per noi e\' importante, grazie.</string>
    <string name="enel_drive">https://www.eneldrive.it/come-ricaricare</string>
    
</resources>
