<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    
    
   <item android:id="@+id/editItem"
      android:title="@string/menuitem_edit_contact" 
      android:titleCondensed="@string/menuitem_edit_contact"
      android:icon="@android:drawable/ic_menu_edit"
      app:showAsAction="always"></item>
   <item android:id="@+id/deleteItem" 
      android:title="@string/menuitem_delete_contact"
      android:titleCondensed="@string/menuitem_delete_contact"
      android:icon="@android:drawable/ic_delete"
      app:showAsAction="always" ></item>
   <item android:id="@+id/navigateItem" 
      android:title="@string/menuitem_navigate_contact"
      android:titleCondensed="@string/menuitem_navigate_contact"
      android:icon="@android:drawable/ic_dialog_map"
      app:showAsAction="always"></item>
</menu>
