<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
   android:layout_width="match_parent" 
   android:layout_height="wrap_content" android:layout_weight="1">
   <TableLayout android:layout_width="match_parent" 
      android:layout_height="wrap_content"
      android:stretchColumns="1" android:layout_margin="5dp">
      <TableRow android:id="@+id/nameTableRow"
         android:layout_width="match_parent" 
         android:layout_height="wrap_content">

         <TextView
             android:id="@+id/nameLabelTextView"
             style="@style/ContactLabelTextView"
             android:text="@string/label_name"
             android:textColor="@android:color/black" >
</TextView>
         <TextView android:id="@+id/nameTextView" 
            style="@style/ContactTextView"></TextView>
      </TableRow>

      <TableRow android:id="@+id/latitudeTableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <TextView
             android:id="@+id/latitudeLabelTextView"
             style="@style/ContactLabelTextView"
             android:text="@string/label_latitude"
             android:textColor="@android:color/black" >
</TextView>
         <TextView android:id="@+id/latitudeTextView"
            style="@style/ContactTextView"></TextView>
      </TableRow>

      <TableRow android:id="@+id/longitudeTableRow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <TextView
             android:id="@+id/longitudeLabelTextView"
             style="@style/ContactLabelTextView"
             android:text="@string/label_longitude"
             android:textColor="@android:color/black" >
</TextView>
         <TextView android:id="@+id/longitudeTextView"
            style="@style/ContactTextView"></TextView>
      </TableRow>

   </TableLayout>
</ScrollView>
